[gd_scene load_steps=4 format=3 uid="uid://0p1rk8ig07os"]

[ext_resource type="Texture2D" uid="uid://ykuvpgr15svx" path="res://sprites/onigokko.png" id="1_56w41"]
[ext_resource type="Script" path="res://src/demon_tongue.gd" id="1_ueje0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_er3gn"]
radius = 0.25

[node name="DemonTongue" type="Node3D"]
script = ExtResource("1_ueje0")

[node name="BallSprite3D" type="Sprite3D" parent="."]
pixel_size = 0.04
billboard = 1
texture_filter = 0
texture = ExtResource("1_56w41")
region_enabled = true
region_rect = Rect2(32, 64, 16, 16)

[node name="Hitbox" type="Area3D" parent="BallSprite3D"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="BallSprite3D/Hitbox"]
shape = SubResource("SphereShape3D_er3gn")

[connection signal="body_entered" from="BallSprite3D/Hitbox" to="." method="_on_hitbox_body_entered"]
